<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jcodee.clase05.MainActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_titulo"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_descripcion"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilLatitud"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50">

            <EditText
                android:id="@+id/etLatitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_latitud"
                android:inputType="numberDecimal|numberSigned" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilLongitud"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50">

            <EditText
                android:id="@+id/etLongitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_longitud"
                android:inputType="numberDecimal|numberSigned" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_registrar" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvPosiciones"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"></android.support.v7.widget.RecyclerView>
</LinearLayout>
